# deepmind-research

./: .gitignore  .travis.yml  LICENSE  README.md  __init__.py
PrediNet/: PrediNet.ipynb  README.md  mini_3task_col_patts_hexos.npz  mini_3task_col_patts_stripes.npz  mini_between_hexos.npz  mini_between_stripes.npz
adversarial_robustness/: README.md  requirements.txt  run.sh
affordances_theory/: AffordancesInContinuousEnvironment.ipynb  AffordancesInDiscreteEnvironment.ipynb  README.md  requirements.txt
alphafold_casp13/: README.md  asa_output.py  config_dict.py  contacts.py  contacts_dataset.py  contacts_experiment.py  contacts_network.py  distogram_io.py  ensemble_contact_maps.py  parsers.py  paste_contact_maps.py  requirements.txt  run_eval.sh  secstruct.py  test_domains.txt  train_domains.txt  two_dim_convnet.py  two_dim_resnet.py
avae/: README.md  checkpointer.py  data_iterators.py  decoders.py  encoders.py  kl.py  requirements.txt  run.sh  train.py  train_main.py  types.py  vae.py
bigbigan/: README.md
box_arrangement/: README.md  __init__.py  dmlab_assets.py  explore.py  predicate_task.py  predicate_task_test.py  predicates.py  setup.py  task_examples.py
byol/: README.md  byol_experiment.py  eval_experiment.py  main_loop.py  main_loop_test.py  requirements.txt  setup.py  test.py
cadl/: README.md  common.proto  constraints.proto  download_dataset.sh  entities.proto  example.proto
catch_carry/: README.md  __init__.py  arm_opener.py  ball_toss.py  explore.py  mocap_data.py  props.py  setup.py  task_examples.py  trajectories.py  warehouse.py
causal_reasoning/: Causal_Reasoning_in_Probability_Trees.ipynb  README.md
cmtouch/: CMTouch_Dataset_Visulization.ipynb  README.md  download_datasets.sh
continual_learning/: README.md  encoders_and_ensembles.ipynb
counterfactual_fairness/: README.md  adult.py  adult_pscf.py  adult_pscf_config.py  causal_network.py  download_dataset.sh  requirements.txt  run_adult_pscf.sh  utils.py  variational.py
cs_gan/: README.md  cs.py  file_utils.py  gan.py  image_metrics.py  main.py  main_cs.py  main_ode.py  nets.py  requirements.txt  run.sh  run_ode.sh  utils.py
curl/: README.md  curl.py  layers.py  model.py  requirements.txt  train_main.py  train_sup.py  train_unsup.py  training.py  unit_test.py  utils.py
density_functional_approximation_dm21/: .bazelrc  BUILD.bazel  README.md  WORKSPACE.bazel  requirements.txt  requirements_aot_compilation.txt  run.sh  setup.py
density_functional_approximation_dm21/cc/: dm21_aot_compiled_example.cc  dm21_aot_compiled_example.h  run_dm21_aot_compiled_example.cc
density_functional_approximation_dm21/density_functional_approximation_dm21/: __init__.py  compute_hfx_density.py  compute_hfx_density_test.py  export_saved_model.py  neural_numint.py  neural_numint_test.py
density_functional_approximation_dm21/density_functional_approximation_dm21/checkpoints/DM21/: saved_model.pb  smart_module.pb
density_functional_approximation_dm21/density_functional_approximation_dm21/checkpoints/DM21/variables/: variables.data-00000-of-00001  variables.index
density_functional_approximation_dm21/density_functional_approximation_dm21/checkpoints/DM21m/: saved_model.pb  smart_module.pb
density_functional_approximation_dm21/density_functional_approximation_dm21/checkpoints/DM21m/variables/: variables.data-00000-of-00001  variables.index
density_functional_approximation_dm21/density_functional_approximation_dm21/checkpoints/DM21mc/: saved_model.pb  smart_module.pb
density_functional_approximation_dm21/density_functional_approximation_dm21/checkpoints/DM21mc/variables/: variables.data-00000-of-00001  variables.index
density_functional_approximation_dm21/density_functional_approximation_dm21/checkpoints/DM21mu/: saved_model.pb  smart_module.pb
density_functional_approximation_dm21/density_functional_approximation_dm21/checkpoints/DM21mu/variables/: variables.data-00000-of-00001  variables.index
enformer/: README.md  attention_module.py  enformer-example.ipynb  enformer-training.ipynb  enformer-usage.ipynb  enformer.py  enformer_test.py  requirements.txt
ensemble_loss_landscape/: README.md  Release_cifar10_medium_cnn_experiments.ipynb
functional_regularisation_for_continual_learning/: README.md  frcl.ipynb
fusion_tcv/: README.md  agent.py  combiners.py  combiners_test.py  environment.py  experiments.py  experiments_test.py  fge_octave.py  fge_state.py  named_array.py  named_array_test.py  noise.py  param_variation.py  ref_gen.py  references.py  references_main.py  requirements.txt  rewards.py  rewards_used.py  run_loop.py  shape.py  shapes_known.py  targets.py  tcv_common.py  terminations.py  trajectory.py  transforms.py  transforms_test.py
galaxy_mergers/: README.md  antennae_helpers.py  config.py  evaluator.py  helpers.py  interpretability_helpers.py  losses.py  main.py  model.py  preprocessing.py  requirements.txt
gated_linear_networks/: README.md  base.py  bernoulli.py  bernoulli_test.py  gaussian.py  gaussian_test.py  requirements.txt  run.sh
geomancer/: README.md  data_writer.py  geomancer.py  geomancer_test.py  run.sh  setup.py  train.py
glassy_dynamics/: README.md  apply_binary.py  graph_model.py  graph_model_test.py  requirements.txt  train.py  train_binary.py  train_test.py  train_using_jax.py
graph_matching_networks/: README.md  requirements.txt  (+1 more)
(+496 files in other folders)
